<resources>
    <string name="app_name">Mastermind</string>

    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>

    <string name="new_game">neues Spiel starten</string>
    <string name="start_game">Spiel starten</string>
    <string name="resume_game">Spiel wiederaufnehmen</string>
    <string name="settings">Einstellungen</string>
    <string name="highscores">Bestenliste</string>
    <string name="licenses">Lizenzen</string>
    <string name="unimportant_stuff">Unwichtiges</string>
    <string name="rules">Regeln</string>
    <string name="mastermind">Mastermind</string>
    <string name="the_game_dam_dam_daaam">The game! (dam dam daaam)</string>
    <string name="Value">Wert</string>
    <string name="game_prep">Spiel-Vorbereitung</string>
    <string name="game">Spiel-Durchführung</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="copyright">© 2018 Spencer Young, Thierry Hammer, Thomas Kuhn, Jonas Bauch</string>
    <string name="anzahl_farben">Anzahl der Farben:</string>
    <string name="anzahl_stellen">Anzahl der Stellen</string>
    <string name="leere_stellen">Dürfen Stellen leer sein?</string>
    <string name="farben_mehrfach">Dürfen Farben mehrfach auftreten?</string>
    <string name="anzahl_runden">Anzahl an Runden</string>
    <string name="m_vs_m">Mensch gegen Maschine?</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="zug_beenden">Zug beenden</string>
    <string name="standard_values">Standard-Werte</string>
    <string name="color_1">Farbe 1</string>
    <string name="color_3">Farbe 3</string>
    <string name="color_4">Farbe 4</string>
    <string name="color_6">Farbe 6</string>
    <string name="color_5">Farbe 5</string>
    <string name="color_7">Farbe 7</string>
    <string name="colors">Farben</string>
    <string name="color_8">Farbe 8</string>
    <string name="save_settings">Einstellungen speichern</string>
    <string name="ok">OK</string>
    <string name="cancel">abbrechen</string>
</resources>
