<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group >
        <item
            android:id="@+id/nav_new_game"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/new_game" />
        <item
            android:id="@+id/nav_resume_game"
            android:icon="@android:drawable/stat_sys_download"
            android:title="@string/resume_game" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_highscores"
            android:icon="@android:drawable/btn_star"
            android:title="@string/highscores" />
        <item
            android:id="@+id/nav_rules"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/rules" />
    </group>

    <item android:title="@string/unimportant_stuff">
        <menu>
            <item
                android:id="@+id/nav_licenses"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/licenses" />
        </menu>
    </item>

</menu>
