<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStandards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/standard_values"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/tvSettingsColorNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/anzahl_farben"
                android:labelFor="@+id/rgSettingsAnzahlFarben"
                android:text="@string/anzahl_farben" />

            <RadioGroup
                android:id="@+id/rgSettingsAnzahlFarben"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rbSettingsFarben5"
                android:focusableInTouchMode="true"
                android:onClick="onSettingsButtonClick"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbSettingsFarben5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSettingsButtonClick"
                    android:text="@string/_5" />

                <RadioButton
                    android:id="@+id/rbSettingsFarben6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSettingsButtonClick"
                    android:text="@string/_6" />

                <RadioButton
                    android:id="@+id/rbSettingsFarben8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSettingsButtonClick"
                    android:text="@string/_8" />

            </RadioGroup>

            <TextView
                android:id="@+id/textViewInTheSettings2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/anzahl_stellen"
                android:labelFor="@+id/rgSettingsAnzahlStellen"
                android:text="@string/anzahl_stellen" />

            <RadioGroup
                android:id="@+id/rgSettingsAnzahlStellen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rbSettingsStellen3"
                android:focusableInTouchMode="true"
                android:onClick="onSettingsButtonClick"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbSettingsStellen3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSettingsButtonClick"
                    android:text="@string/_3" />

                <RadioButton
                    android:id="@+id/rbSettingsStellen4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSettingsButtonClick"
                    android:text="@string/_4" />

                <RadioButton
                    android:id="@+id/rbSettingsStellen5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSettingsButtonClick"
                    android:text="@string/_5" />

                <RadioButton
                    android:id="@+id/rbSettingsStellen6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSettingsButtonClick"
                    android:text="@string/_6" />

                <RadioButton
                    android:id="@+id/rbSettingsStellen8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSettingsButtonClick"
                    android:text="@string/_8" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/cbSettingsLeereStellen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSettingsButtonClick"
                android:text="@string/leere_stellen" />

            <CheckBox
                android:id="@+id/cbSettingsFarbenMehrfach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSettingsButtonClick"
                android:text="@string/farben_mehrfach" />

            <TextView
                android:id="@+id/tvSettingsAnzRunden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/anzahl_runden"
                android:labelFor="@+id/nfSettingsAnzahlRunden"
                android:text="@string/anzahl_runden" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/sbSettingsRunden"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="99"
                    android:progress="9" />

                <EditText
                    android:id="@+id/nfSettingsAnzahlRunden"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/cbSettingsComGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSettingsButtonClick"
                android:text="@string/m_vs_m" />

            <TextView
                android:id="@+id/textViewInTheSettings3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/colors"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/c1"
                android:onClick="chooseColor"
                android:text="@string/color_1" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/c2"
                android:onClick="chooseColor"
                android:text="@string/color_1" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/c0"
                android:onClick="chooseColor"
                android:text="@string/color_3" />

            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/c4"
                android:onClick="chooseColor"
                android:text="@string/color_4" />

            <Button
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/c5"
                android:onClick="chooseColor"
                android:text="@string/color_5" />

            <Button
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/c6"
                android:onClick="chooseColor"
                android:text="@string/color_6" />

            <Button
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/c7"
                android:onClick="chooseColor"
                android:text="@string/color_7" />

            <Button
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/c8"
                android:onClick="chooseColor"
                android:text="@string/color_8" />


            <!--<com.jrummyapps.android.colorpicker.ColorPreference
                        android:defaultValue="@color/c1"
                        android:key="default_color"
                        android:summary="Dings1"
                        android:title="Dings2"/>-->


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSettingsButtonClick"
                android:text="@string/save_settings" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
